native/accelerate-ffi/src/accelerate.rs

unsafe extern "C" {
    pub fn cblas_zdotc_sub(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *const ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __dotc: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn cblas_snrm2(
        __N: ::std::os::raw::c_int,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
    ) -> f32;
}
unsafe extern "C" {
    pub fn cblas_sasum(
        __N: ::std::os::raw::c_int,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
    ) -> f32;
}
unsafe extern "C" {
    pub fn cblas_dnrm2(
        __N: ::std::os::raw::c_int,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
    ) -> f64;
}
unsafe extern "C" {
    pub fn cblas_dasum(
        __N: ::std::os::raw::c_int,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
    ) -> f64;
}
unsafe extern "C" {
    pub fn cblas_scnrm2(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    ) -> f32;
}
unsafe extern "C" {
    pub fn cblas_scasum(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    ) -> f32;
}
unsafe extern "C" {
    pub fn cblas_dznrm2(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    ) -> f64;
}
unsafe extern "C" {
    pub fn cblas_dzasum(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    ) -> f64;
}
unsafe extern "C" {
    pub fn cblas_isamax(
        __N: ::std::os::raw::c_int,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cblas_idamax(
        __N: ::std::os::raw::c_int,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cblas_icamax(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cblas_izamax(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn cblas_sswap(
        __N: ::std::os::raw::c_int,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_scopy(
        __N: ::std::os::raw::c_int,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_saxpy(
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn catlas_saxpby(
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __beta: f32,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn catlas_sset(
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dswap(
        __N: ::std::os::raw::c_int,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dcopy(
        __N: ::std::os::raw::c_int,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_daxpy(
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn catlas_daxpby(
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *const f64,
        __incX: ::std::os::raw::c_int,
        __beta: f64,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn catlas_dset(
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_cswap(
        __N: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_ccopy(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_caxpy(
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn catlas_caxpby(
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn catlas_cset(
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zswap(
        __N: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zcopy(
        __N: ::std::os::raw::c_int,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zaxpy(
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn catlas_zaxpby(
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *const ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __beta: *const ::std::os::raw::c_void,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn catlas_zset(
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_srotg(__a: *mut f32, __b: *mut f32, __c: *mut f32, __s: *mut f32);
}
unsafe extern "C" {
    pub fn cblas_srotmg(__d1: *mut f32, __d2: *mut f32, __b1: *mut f32, __b2: f32, __P: *mut f32);
}
unsafe extern "C" {
    pub fn cblas_srot(
        __N: ::std::os::raw::c_int,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
        __c: f32,
        __s: f32,
    );
}
unsafe extern "C" {
    pub fn cblas_srotm(
        __N: ::std::os::raw::c_int,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
        __P: *const f32,
    );
}
unsafe extern "C" {
    pub fn cblas_drotg(__a: *mut f64, __b: *mut f64, __c: *mut f64, __s: *mut f64);
}
unsafe extern "C" {
    pub fn cblas_drotmg(__d1: *mut f64, __d2: *mut f64, __b1: *mut f64, __b2: f64, __P: *mut f64);
}
unsafe extern "C" {
    pub fn cblas_drot(
        __N: ::std::os::raw::c_int,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
        __c: f64,
        __s: f64,
    );
}
unsafe extern "C" {
    pub fn cblas_drotm(
        __N: ::std::os::raw::c_int,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
        __Y: *mut f64,
        __incY: ::std::os::raw::c_int,
        __P: *const f64,
    );
}
unsafe extern "C" {
    pub fn cblas_sscal(
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *mut f32,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_dscal(
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *mut f64,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_cscal(
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zscal(
        __N: ::std::os::raw::c_int,
        __alpha: *const ::std::os::raw::c_void,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_csscal(
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_zdscal(
        __N: ::std::os::raw::c_int,
        __alpha: f64,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_crotg(
        __a: *mut ::std::os::raw::c_void,
        __b: *mut ::std::os::raw::c_void,
        __c: *mut ::std::os::raw::c_void,
        __s: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn cblas_zrotg(
        __a: *mut ::std::os::raw::c_void,
        __b: *mut ::std::os::raw::c_void,
        __c: *mut ::std::os::raw::c_void,
        __s: *mut ::std::os::raw::c_void,
    );
}
unsafe extern "C" {
    pub fn cblas_csrot(
        __N: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __c: f32,
        __s: f32,
    );
}
unsafe extern "C" {
    pub fn cblas_zdrot(
        __N: ::std::os::raw::c_int,
        __X: *mut ::std::os::raw::c_void,
        __incX: ::std::os::raw::c_int,
        __Y: *mut ::std::os::raw::c_void,
        __incY: ::std::os::raw::c_int,
        __c: f64,
        __s: f64,
    );
}
unsafe extern "C" {
    pub fn cblas_sgemv(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __beta: f32,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
unsafe extern "C" {
    pub fn cblas_sgbmv(
        __Order: CBLAS_ORDER,
        __TransA: CBLAS_TRANSPOSE,
        __M: ::std::os::raw::c_int,
        __N: ::std::os::raw::c_int,
        __KL: ::std::os::raw::c_int,
        __KU: ::std::os::raw::c_int,
        __alpha: f32,
        __A: *const f32,
        __lda: ::std::os::raw::c_int,
        __X: *const f32,
        __incX: ::std::os::raw::c_int,
        __beta: f32,
        __Y: *mut f32,
        __incY: ::std::os::raw::c_int,
    );
}
